@@ -1,10 +1,15 @@
 package com.robertx22.mine_and_slash.database.stats.stat_types.game_changers;
 
 import com.robertx22.mine_and_slash.database.stats.stat_effects.game_changers.BloodMageEffect;
+import com.robertx22.mine_and_slash.database.stats.stat_types.resources.Mana;
+import com.robertx22.mine_and_slash.database.stats.stat_types.resources.ManaRegen;
+import com.robertx22.mine_and_slash.saveclasses.StatData;
+import com.robertx22.mine_and_slash.uncommon.capability.EntityCap;
+import com.robertx22.mine_and_slash.uncommon.interfaces.IAffectsStats;
 import com.robertx22.mine_and_slash.uncommon.interfaces.IStatEffect;
 import com.robertx22.mine_and_slash.uncommon.interfaces.IStatEffects;
 
-public class BloodMage extends BaseGameChangerTrait implements IStatEffects {
+public class BloodMage extends BaseGameChangerTrait implements IStatEffects, IAffectsStats {
 
     private BloodMage() {
     }
@@ -13,7 +18,7 @@ public class BloodMage extends BaseGameChangerTrait implements IStatEffects {
 
     @Override
     public String locDescForLangFile() {
-        return "Your mana is transformed into blood. You replenish blood with any non spell related health restoration method like hp regen or lifesteal.";
+        return "Your have no mana, you use blood instead. Max blood is half of your health. You replenish blood with any non spell related health restoration method like hp regen or lifesteal.";
     }
 
     @Override
@@ -34,6 +39,12 @@ public class BloodMage extends BaseGameChangerTrait implements IStatEffects {
     @Override
     public IStatEffect getEffect() {
         return BloodMageEffect.INSTANCE;
+    }
+
+    @Override
+    public void affectStats(EntityCap.UnitData data, StatData statData) {
+        data.getUnit().getStat(Mana.GUID).Flat -= Integer.MAX_VALUE;
+        data.getUnit().getStat(ManaRegen.GUID).Flat -= Integer.MAX_VALUE;
     }
 }
 
