@@ -96,34 +96,6 @@
 "_comment": " [CATEGORY]: MISC - NAMES",
 
 
-"_comment": " [CATEGORY]: SPELLS - NAMES",
-
-	"item.mmorpg.spell_acid_bomb": "§cVenom Bomb",
-	"item.mmorpg.spell_acidbolt": "§cVenom Bolt",
-	"item.mmorpg.spell_acidexplosion": "§cVenom Explosion",
-	"item.mmorpg.spell_fire_bomb": "§cFlame Bomb",
-	"item.mmorpg.spell_fire_nova": "§cFlame Nova",
-	"item.mmorpg.spell_firebolt": "§cFlame Bolt",
-	"item.mmorpg.spell_flameexplosion": "§cFlame Explosion",
-	"item.mmorpg.spell_frost_nova": "§cFrost Nova",
-	"item.mmorpg.spell_frostbolt": "§cFrost Bolt",
-	"item.mmorpg.spell_frostexplosion": "§cFrost Explosion",
-	"item.mmorpg.spell_ice_bomb": "§cFrost Bomb",
-	"item.mmorpg.spell_instantheal": "§cInstant Heal",
-	"item.mmorpg.spell_lightningexplosion": "§cLightning Explosion",
-	"item.mmorpg.spell_poison_nova": "§cVenom Nova",
-	"item.mmorpg.spell_self_regen": "§cRegenerate",
-	"item.mmorpg.spell_thunder_bomb": "§cLightning Bomb",
-	"item.mmorpg.spell_thunder_nova": "§cLightning Nova",
-	"item.mmorpg.spell_thunderbolt": "§cLightning Bolt",
-	"item.mmorpg.spells.extra_flame_dmg": "§cExtra Flame Damage",
-	"item.mmorpg.spells.extra_frost_dmg": "§cExtra Frost Damage",
-	"item.mmorpg.spells.extra_lightning_dmg": "§cExtra Lightning Damage",
-	"item.mmorpg.spells.extra_venom_dmg": "§cExtra Venom Damage",
-
-"_comment": " [CATEGORY]: SPELLS - NAMES",
-
-
 "_comment": " [CATEGORY]: ALCHEMY - NAMES",
 
 	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_1": "§7Minor Energy Regen Buff Potion ",
@@ -175,6 +147,34 @@
 "_comment": " [CATEGORY]: ALCHEMY - NAMES",
 
 
+"_comment": " [CATEGORY]: SPELLS - NAMES",
+
+	"item.mmorpg.spell_acid_bomb": "§cVenom Bomb",
+	"item.mmorpg.spell_acidbolt": "§cVenom Bolt",
+	"item.mmorpg.spell_acidexplosion": "§cVenom Explosion",
+	"item.mmorpg.spell_fire_bomb": "§cFlame Bomb",
+	"item.mmorpg.spell_fire_nova": "§cFlame Nova",
+	"item.mmorpg.spell_firebolt": "§cFlame Bolt",
+	"item.mmorpg.spell_flameexplosion": "§cFlame Explosion",
+	"item.mmorpg.spell_frost_nova": "§cFrost Nova",
+	"item.mmorpg.spell_frostbolt": "§cFrost Bolt",
+	"item.mmorpg.spell_frostexplosion": "§cFrost Explosion",
+	"item.mmorpg.spell_ice_bomb": "§cFrost Bomb",
+	"item.mmorpg.spell_instantheal": "§cInstant Heal",
+	"item.mmorpg.spell_lightningexplosion": "§cLightning Explosion",
+	"item.mmorpg.spell_poison_nova": "§cVenom Nova",
+	"item.mmorpg.spell_self_regen": "§cRegenerate",
+	"item.mmorpg.spell_thunder_bomb": "§cLightning Bomb",
+	"item.mmorpg.spell_thunder_nova": "§cLightning Nova",
+	"item.mmorpg.spell_thunderbolt": "§cLightning Bolt",
+	"item.mmorpg.spells.extra_flame_dmg": "§cExtra Flame Damage",
+	"item.mmorpg.spells.extra_frost_dmg": "§cExtra Frost Damage",
+	"item.mmorpg.spells.extra_lightning_dmg": "§cExtra Lightning Damage",
+	"item.mmorpg.spells.extra_venom_dmg": "§cExtra Venom Damage",
+
+"_comment": " [CATEGORY]: SPELLS - NAMES",
+
+
 "_comment": " [CATEGORY]: ITEM SETS - NAMES",
 
 	"mmorpg.set.archemage_vestments": "Mage's Robes",
@@ -209,6 +209,26 @@
 	"mmorpg.set.wisdom_of_the_elders": "Wisdom of the Elders",
 
 "_comment": " [CATEGORY]: ITEM SETS - NAMES",
+
+
+"_comment": " [CATEGORY]: ADVANCEMENT TITLES - NAMES",
+
+	"mmorpg.advancement.title.addaffix": "Add Affix",
+	"mmorpg.advancement.title.currencybag": "Currency Bag",
+	"mmorpg.advancement.title.factorystation": "Factory Station",
+	"mmorpg.advancement.title.firstadventuremap": "First Adventure Map!",
+	"mmorpg.advancement.title.level": "Level",
+	"mmorpg.advancement.title.levelpenalty": "Level Penalty",
+	"mmorpg.advancement.title.lootbag": "Loot Bag",
+	"mmorpg.advancement.title.mapbag": "Map Bag",
+	"mmorpg.advancement.title.mapdevice": "Map Device",
+	"mmorpg.advancement.title.masterbag": "Master Bag",
+	"mmorpg.advancement.title.modifystation": "Modify Station",
+	"mmorpg.advancement.title.repairstation": "Repair Station",
+	"mmorpg.advancement.title.salvagestation": "Salvage Station",
+	"mmorpg.advancement.title.welcomemineandslash": "Welcome to Mine and Slash!",
+
+"_comment": " [CATEGORY]: ADVANCEMENT TITLES - NAMES",
 
 
 "_comment": " [CATEGORY]: LOOTBOXES - NAMES",
@@ -269,26 +289,6 @@
 	"item.mmorpg.lootbox.small_spell_lootbox_5": "§dMythical Small Spell Treasure Box",
 
 "_comment": " [CATEGORY]: LOOTBOXES - NAMES",
-
-
-"_comment": " [CATEGORY]: ADVANCEMENT TITLES - NAMES",
-
-	"mmorpg.advancement.title.addaffix": "Add Affix",
-	"mmorpg.advancement.title.currencybag": "Currency Bag",
-	"mmorpg.advancement.title.factorystation": "Factory Station",
-	"mmorpg.advancement.title.firstadventuremap": "First Adventure Map!",
-	"mmorpg.advancement.title.level": "Level",
-	"mmorpg.advancement.title.levelpenalty": "Level Penalty",
-	"mmorpg.advancement.title.lootbag": "Loot Bag",
-	"mmorpg.advancement.title.mapbag": "Map Bag",
-	"mmorpg.advancement.title.mapdevice": "Map Device",
-	"mmorpg.advancement.title.masterbag": "Master Bag",
-	"mmorpg.advancement.title.modifystation": "Modify Station",
-	"mmorpg.advancement.title.repairstation": "Repair Station",
-	"mmorpg.advancement.title.salvagestation": "Salvage Station",
-	"mmorpg.advancement.title.welcomemineandslash": "Welcome to Mine and Slash!",
-
-"_comment": " [CATEGORY]: ADVANCEMENT TITLES - NAMES",
 
 
 "_comment": " [CATEGORY]: RUNE WORDS - NAMES",
@@ -657,53 +657,6 @@
 "_comment": " [CATEGORY]: WORDS - NAMES",
 
 
-"_comment": " [CATEGORY]: SUFFIXES - NAMES",
-
-	"mmorpg.suffix.fire_of_dissonance": "Of Flame's Dissonance",
-	"mmorpg.suffix.nature_of_dissonance": "Of Venom's Dissonance",
-	"mmorpg.suffix.of_axe_flurry": "Of Axe Flurry",
-	"mmorpg.suffix.of_balance": "Of Balance",
-	"mmorpg.suffix.of_behemoths": "Of Behemoths",
-	"mmorpg.suffix.of_blizzards": "Of Blizzards",
-	"mmorpg.suffix.of_bow_flurry": "Of Bow Flurry",
-	"mmorpg.suffix.of_critical_damage": "Of Critical Damage",
-	"mmorpg.suffix.of_critical_hits": "Of Critical Hits",
-	"mmorpg.suffix.of_critical_unity": "Of Critical Unity",
-	"mmorpg.suffix.of_crossbow_flurry": "Of CrossBow Flurry",
-	"mmorpg.suffix.of_earthquakes": "Of Earthquakes",
-	"mmorpg.suffix.of_element_resist": "Of Element Resist",
-	"mmorpg.suffix.of_firestorms": "Of Firestorms",
-	"mmorpg.suffix.of_giants": "Of Giants",
-	"mmorpg.suffix.of_godhood": "Of Godhood",
-	"mmorpg.suffix.of_guidance": "Of Guidance",
-	"mmorpg.suffix.of_hammer_flurry": "Of Hammer Flurry",
-	"mmorpg.suffix.of_immortality": "Of Immortality",
-	"mmorpg.suffix.of_magic_shield": "Of Magic Shield",
-	"mmorpg.suffix.of_major_affinity_fire": "Of Major Fire Affinity",
-	"mmorpg.suffix.of_major_affinity_nature": "Of Major Nature Affinity",
-	"mmorpg.suffix.of_major_affinity_thunder": "Of Major Thunder Affinity",
-	"mmorpg.suffix.of_major_affinity_water": "Of Major Water Affinity",
-	"mmorpg.suffix.of_mana_regen": "Of Mana Regen",
-	"mmorpg.suffix.of_rock_skin": "Of Rock Skin",
-	"mmorpg.suffix.of_staff_flurry": "Of Staff Flurry",
-	"mmorpg.suffix.of_swiftness": "Of Swiftness",
-	"mmorpg.suffix.of_sword_flurry": "Of Sword Flurry",
-	"mmorpg.suffix.of_the_hydra": "Of the Hydra",
-	"mmorpg.suffix.of_the_sage": "Of The Sage",
-	"mmorpg.suffix.of_thunderstorms": "Of Thunderstorms",
-	"mmorpg.suffix.of_vitality": "Of Vitality",
-	"mmorpg.suffix.of_wand_flurry": "Of Wand Flurry",
-	"mmorpg.suffix.offorce": "Of Force",
-	"mmorpg.suffix.ofhiddensense": "Of Hidden Sense",
-	"mmorpg.suffix.ofrockpiercing": "Of Rock Piercing",
-	"mmorpg.suffix.ofthedepths": "Of The Depths",
-	"mmorpg.suffix.ofvampirism": "Of Vampirism",
-	"mmorpg.suffix.thunder_of_dissonance": "Of Lightning's Dissonance",
-	"mmorpg.suffix.water_of_dissonance": "Of Frost's Dissonance",
-
-"_comment": " [CATEGORY]: SUFFIXES - NAMES",
-
-
 "_comment": " [CATEGORY]: STATS - NAMES",
 
 	"mmorpg.stat.acidbolt_power": "§cVenom Bolt Power",
@@ -929,6 +882,53 @@
 	"mmorpg.stat.zephyr's_speed": "Zephyr",
 
 "_comment": " [CATEGORY]: STATS - NAMES",
+
+
+"_comment": " [CATEGORY]: SUFFIXES - NAMES",
+
+	"mmorpg.suffix.fire_of_dissonance": "Of Flame's Dissonance",
+	"mmorpg.suffix.nature_of_dissonance": "Of Venom's Dissonance",
+	"mmorpg.suffix.of_axe_flurry": "Of Axe Flurry",
+	"mmorpg.suffix.of_balance": "Of Balance",
+	"mmorpg.suffix.of_behemoths": "Of Behemoths",
+	"mmorpg.suffix.of_blizzards": "Of Blizzards",
+	"mmorpg.suffix.of_bow_flurry": "Of Bow Flurry",
+	"mmorpg.suffix.of_critical_damage": "Of Critical Damage",
+	"mmorpg.suffix.of_critical_hits": "Of Critical Hits",
+	"mmorpg.suffix.of_critical_unity": "Of Critical Unity",
+	"mmorpg.suffix.of_crossbow_flurry": "Of CrossBow Flurry",
+	"mmorpg.suffix.of_earthquakes": "Of Earthquakes",
+	"mmorpg.suffix.of_element_resist": "Of Element Resist",
+	"mmorpg.suffix.of_firestorms": "Of Firestorms",
+	"mmorpg.suffix.of_giants": "Of Giants",
+	"mmorpg.suffix.of_godhood": "Of Godhood",
+	"mmorpg.suffix.of_guidance": "Of Guidance",
+	"mmorpg.suffix.of_hammer_flurry": "Of Hammer Flurry",
+	"mmorpg.suffix.of_immortality": "Of Immortality",
+	"mmorpg.suffix.of_magic_shield": "Of Magic Shield",
+	"mmorpg.suffix.of_major_affinity_fire": "Of Major Fire Affinity",
+	"mmorpg.suffix.of_major_affinity_nature": "Of Major Nature Affinity",
+	"mmorpg.suffix.of_major_affinity_thunder": "Of Major Thunder Affinity",
+	"mmorpg.suffix.of_major_affinity_water": "Of Major Water Affinity",
+	"mmorpg.suffix.of_mana_regen": "Of Mana Regen",
+	"mmorpg.suffix.of_rock_skin": "Of Rock Skin",
+	"mmorpg.suffix.of_staff_flurry": "Of Staff Flurry",
+	"mmorpg.suffix.of_swiftness": "Of Swiftness",
+	"mmorpg.suffix.of_sword_flurry": "Of Sword Flurry",
+	"mmorpg.suffix.of_the_hydra": "Of the Hydra",
+	"mmorpg.suffix.of_the_sage": "Of The Sage",
+	"mmorpg.suffix.of_thunderstorms": "Of Thunderstorms",
+	"mmorpg.suffix.of_vitality": "Of Vitality",
+	"mmorpg.suffix.of_wand_flurry": "Of Wand Flurry",
+	"mmorpg.suffix.offorce": "Of Force",
+	"mmorpg.suffix.ofhiddensense": "Of Hidden Sense",
+	"mmorpg.suffix.ofrockpiercing": "Of Rock Piercing",
+	"mmorpg.suffix.ofthedepths": "Of The Depths",
+	"mmorpg.suffix.ofvampirism": "Of Vampirism",
+	"mmorpg.suffix.thunder_of_dissonance": "Of Lightning's Dissonance",
+	"mmorpg.suffix.water_of_dissonance": "Of Frost's Dissonance",
+
+"_comment": " [CATEGORY]: SUFFIXES - NAMES",
 
 
 "_comment": " [CATEGORY]: ADVANCEMENT DESCRIPTIONS - NAMES",
@@ -1457,7 +1457,7 @@
 	"mmorpg.stat_desc.bleed_mastery_trait": "Your phys basic attacks inflict % of your phys dmg as bleed on targets",
 	"mmorpg.stat_desc.block_reflect": "When blocking an attack, damage the enemy",
 	"mmorpg.stat_desc.blockstrength": "Blocks part of DMG when blocking, if all damage is blocked, attack is canceled",
-	"mmorpg.stat_desc.blood_mage_trait": "Your mana is transformed into blood. You replenish blood with any non spell related health restoration method like hp regen or lifesteal.",
+	"mmorpg.stat_desc.blood_mage_trait": "Your have no mana, you use blood instead. Max blood is half of your health. You replenish blood with any non spell related health restoration method like hp regen or lifesteal.",
 	"mmorpg.stat_desc.bonus_specific_spell": "Increases Effect of that spell, whether that's damage, heal etc",
 	"mmorpg.stat_desc.bonusexpflat": "Increases exp gained",
 	"mmorpg.stat_desc.buff_energy_regen": "Killing Blows with Bomb Spells grant you Energy Regen.",
