@@ -25,6 +25,13 @@ dodge transformed into dodge rating. now scales to lvl
 added magic shield stat
 mana and mana regen now scales to lvl. This is in preparation for cool stuff like "your mana takes dmg instead of your hp"
 mana and energy costs now scale to average worn gear lvl, not item/spell lvl. This might sound weird but otherwise you could spam your lvl 1 spell that uses % of your spell dmg and never run out of mana.
+this was i think the best of the 3 options i had.
+Scaling costs to player lvl would make players with low lvl gear suffer a bunch.
+Scaling to weapon lvl, would allow cheese builds like % spell to attack dmg rings and lvl 1 weapons.
+Scaling to avg gear lvl though, neither of these are a problem anymore. You're still rewarded for increasing gear lvl.
+But the only downside is if you say replace a mythic lvl 5 piece with a common lvl 10 piece, you would be punished a bit. But that encourages getting good rarity gear instead of just latest gear for your lvl, 
+so maybe it's not a downside at all? Will see!
+
 good news is this is another stat that scales to lvl, meaning finding new higher lvl gear will be much more rewarding!
 made mobs a tiny bit stronger cus players now have 125 talent points at max lvl.
 as talents introduced a lot more stats, stat requirements now scale harder a bit
